# foundry-evm-core

./: Cargo.toml  README.md
crates/cheatcodes/spec/: Cargo.toml
crates/common/: Cargo.toml
crates/config/: Cargo.toml
crates/evm/core/: Cargo.toml
crates/macros/: Cargo.toml
