[workspace]
members = [
    "crates/cheatcodes/spec/", 
    "crates/common/", 
    "crates/config/", 
    "crates/evm/core/",
    "crates/macros/", 
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75" 
authors = ["Foundry Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
foundry-cheatcodes-spec = { path = "crates/cheatcodes/spec" }
foundry-common = { path = "crates/common" }
foundry-config = { path = "crates/config" }
foundry-evm-core = { path = "crates/evm/core" }
foundry-macros = { path = "crates/macros" }

# solc & compilation utilities
foundry-block-explorers = { version = "0.2.3", default-features = false }
foundry-compilers = { version = "0.3.9", default-features = false }

## revm
# no default features to avoid c-kzg
revm = { version = "3", default-features = false }
revm-primitives = { version = "1", default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "e90052361276aebcdc67cb24d8e2c4d907b6d299", default-features = false }

## ethers
ethers-core = { version = "2.0.14", default-features = false }
ethers-providers = { version = "2.0.14", default-features = false }
ethers-signers = { version = "2.0.14", default-features = false }
ethers-middleware = { version = "2.0.14", default-features = false }

## alloy
alloy-genesis = { git = "https://github.com/alloy-rs/alloy" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy" }
alloy-providers = { git = "https://github.com/alloy-rs/alloy" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy" }
alloy-primitives = { version = "0.6.3", features = ["getrandom"] }
alloy-dyn-abi = "0.6.3"
alloy-json-abi = "0.6.3"
alloy-sol-types = "0.6.3"
alloy-chains = "0.1"

## misc
derive_more = "0.99"
eyre = "0.6"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
itertools = "0.11"
pretty_assertions = "1.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tracing = "0.1"
tower = "0.4"

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" } # Maybe not necessary
revm-precompile = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" } # Maybe not necessary
