[workspace]
members = [
    "crates/cheatcodes/spec/", 
    "crates/common/", 
    "crates/config/", 
    "crates/evm/core/",
    "crates/macros/", 
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75" 
authors = ["Foundry Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
foundry-cheatcodes-spec = { path = "crates/cheatcodes/spec" }
foundry-common = { path = "crates/common" }
foundry-config = { path = "crates/config" }
foundry-evm-core = { path = "crates/evm/core" }
foundry-macros = { path = "crates/macros" }

# solc & compilation utilities
foundry-block-explorers = { version = "0.2.3", default-features = false }
foundry-compilers = { version = "0.3.9", default-features = false }

## revm
# no default features to avoid c-kzg
revm = { version = "6.1", default-features = false }
# revm-primitives@2.1.0
revm-primitives = { git = "https://github.com/bluealloy/revm.git", rev = "76e7c88de07221e1ffe68e05f2be384ff6bcad31" , default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "5d560be", features = [
    "serde",
] }

## ethers
ethers-core = { version = "2.0.14", default-features = false }
ethers-providers = { version = "2.0.14", default-features = false }
ethers-signers = { version = "2.0.14", default-features = false }
ethers-middleware = { version = "2.0.14", default-features = false }

## alloy
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-providers = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "785c667" }

alloy-primitives = { version = "0.6.3", features = ["getrandom"] }
alloy-dyn-abi = "0.6.3"
alloy-json-abi = "0.6.3"
alloy-sol-types = "0.6.3"
alloy-chains = "0.1"

## misc
derive_more = "0.99"
eyre = "0.6"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
itertools = "0.11"
pretty_assertions = "1.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tracing = "0.1"
tower = "0.4"

[patch.crates-io]
revm-interpreter = { git = "https://github.com/bluealloy/revm.git", rev = "76e7c88de07221e1ffe68e05f2be384ff6bcad31" } # Needed for aliging revm-primitives@2.1.0
revm-precompile = { git = "https://github.com/bluealloy/revm.git", rev = "76e7c88de07221e1ffe68e05f2be384ff6bcad31" } # Needed for aliging revm-primitives@2.1.0

