[package]
name = "foundry-common"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] } # checked
foundry-compilers.workspace = true # checked
foundry-config.workspace = true # checked

ethers-core.workspace = true # checked
ethers-middleware.workspace = true # checked
ethers-providers = { workspace = true, features = ["ws", "ipc"] } # checked
ethers-signers.workspace = true # checked

alloy-dyn-abi = { workspace = true, features = ["arbitrary", "eip712"] } # checked
alloy-json-abi.workspace = true # checked
alloy-primitives = { workspace = true, features = ["serde", "getrandom", "arbitrary", "rlp"] } # checked
alloy-rpc-types.workspace = true # checked
alloy-rpc-client.workspace = true # checked
alloy-providers.workspace = true # checked
alloy-transport.workspace = true # checked
alloy-signer.workspace = true # checked
alloy-transport-http.workspace = true # checked
alloy-transport-ws.workspace = true # checked
alloy-transport-ipc.workspace = true # checked
alloy-json-rpc.workspace = true # checked
alloy-pubsub.workspace = true # checked
alloy-sol-types.workspace = true # checked

tower.workspace = true # checked

async-trait = "0.1" # checked
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] } # checked
comfy-table = "7" # checked
dunce = "1" # checked
eyre.workspace = true # checked
glob = "0.3" # checked
globset = "0.4" # checked
hex.workspace = true # checked
once_cell = "1" # checked
rand.workspace = true # checked
reqwest = { version = "0.11", default-features = false } # checked
semver = "1" # checked
serde_json.workspace = true # checked
serde.workspace = true # checked
tempfile = "3" # checked
thiserror = "1" # checked
tokio = "1" # checked
tracing.workspace = true # checked
url = "2" # checked
walkdir = "2" # checked
yansi = "0.5" # checked

[dev-dependencies]
foundry-macros.workspace = true # checked
pretty_assertions.workspace = true # checked
tokio = { version = "1", features = ["rt-multi-thread", "macros"] } # checked
