[package]
name = "foundry-evm-core"
description = "Core EVM abstractions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
foundry-cheatcodes-spec.workspace = true # checked
foundry-common.workspace = true # checked
foundry-compilers.workspace = true # checked
foundry-config.workspace = true # checked
foundry-macros.workspace = true # checked

alloy-dyn-abi = { workspace = true, features = ["arbitrary", "eip712"] } # checked
alloy-json-abi.workspace = true # checked
alloy-primitives = { workspace = true, features = ["serde", "getrandom", "arbitrary", "rlp"] } # checked
alloy-genesis.workspace = true # checked
alloy-providers.workspace = true # checked
alloy-rpc-types.workspace = true # checked
alloy-sol-types.workspace = true # checked
alloy-transport.workspace = true # checked

revm = { workspace = true, default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
    "optimism",
] } # checked
revm-inspectors.workspace = true # checked

derive_more.workspace = true # checked
eyre = "0.6" # checked
futures = "0.3" # checked
hex.workspace = true # checked
itertools.workspace = true # checked
once_cell = "1" # checked
parking_lot = "0.12" # checked
serde = "1" # checked
serde_json = "1" # checked
thiserror = "1" # checked
tokio = { version = "1", features = ["time", "macros"] } # checked
tracing = "0.1" # checked
url = "2" # checked
